fix contrast

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4039,7 +4039,7 @@ input, select, textarea {
 				}
 
 		#footer label {
-			color: #717981;
+			color: black;
 		}
 
 		#footer input[type="text"],
